src/test/ui/parser/keyword-typeof.stderr
error: expected pattern, found reserved keyword `typeof`
  --> $DIR/keyword-typeof.rs:4:9
   |
LL |     let typeof = (); //~ ERROR expected pattern, found reserved keyword `typeof`
   |         ^^^^^^ expected pattern

error: aborting due to previous error

