src/test/ui/parser/keyword-typeof.rs
// compile-flags: -Z parse-only

fn main() {
    let typeof = (); //~ ERROR expected pattern, found reserved keyword `typeof`
}
